# bnf

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  clippy.toml  divan_comparison.md
.cursor/rules/: bnf-grammar-concepts.mdc  development-workflow.mdc  markdown-standards.mdc  project-structure.mdc  rust-coding-standards.mdc  testing-guidelines.mdc  testing-standards.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  something-else-.md
.github/actions-rs/: grcov.yml
.github/workflows/: ci.yml  continuous_integration.yml  pr.yml  tag-and-publish-crate.yaml
benches/: README.md  TRACING_OPTIMIZATION.md  bnf.rs  criterion.rs  divan.rs  util.rs
bnf-macros/: Cargo.toml
bnf-macros/src/: lib.rs
docs/: compile-time-bnf-research.md
examples/: README.md  const_grammar.rs  create_grammar.rs  parse_tree.rs  parse_tree_explicit_entrypoint.rs
src/: append_vec.rs  augmented.rs  earley.rs  earley_new.rs  ebnf.pest  ebnf.rs  error.rs  expression.rs  generate.rs  generation.rs  grammar.rs  lib.rs  node.rs  parsers.rs  production.rs  reports.rs  slice_iter.rs  term.rs  tracing.rs  validation.rs
src/earley/: grammar.rs  input_range.rs  mod.rs  traversal.rs  traversal_new.rs
src/iso_14977/: mod.rs
src/new_earley/: grammar.rs  input_range.rs  mod.rs  traversal.rs
src/node/: expression.rs  grammar.rs  mod.rs  production.rs  term.rs
src/parser/: grammar.rs  mod.rs
src/parsers/: augmented.rs  bnf.rs  mod.rs  nom_xt.rs
tests/: display.rs  from_str.rs  generate.rs  grammar.rs  grammar_const.rs  iterate.rs  nodes.rs  parse_input.rs
tests/fixtures/: abnf.abnf  bnf.abnf  bnf.bnf  postal_address.nonterminated.input.bnf  postal_address.terminated.input.bnf
tests/snapshots/: parse_input__ambiguous.snap  parse_input__branching_and_overlapping_parse_trees.snap  parse_input__branching_and_overlapping_parse_trees.snap.new  parse_input__complete_empty.snap  parse_input__dna_annotated_grammar_parses_input.snap  parse_input__dna_left_recursive.snap  parse_input__dna_right_recursive.snap  parse_input__empty.snap  parse_input__empty_ambiguous.snap  parse_input__empty_first_nested.snap  parse_input__empty_first_nested.snap.new  parse_input__empty_inline.snap  parse_input__empty_left_recursive.snap  parse_input__empty_noop_infinite.snap  parse_input__empty_right_recursive.snap  parse_input__math.snap  parse_input__mermaid_dna_parse_tree.snap  parse_input__mermaid_math_parse_tree.snap  parse_input__mermaid_punctuation_backslash_terminal.snap  parse_input__mermaid_punctuation_closing_bracket_terminal.snap  parse_input__mermaid_punctuation_double_quote_terminal.snap  parse_input__mermaid_punctuation_opening_bracket_terminal.snap  parse_input__mermaid_punctuation_slash_and_angle_brackets.snap  parse_input__mermaid_silly_syntax_salad.snap  parse_input__nested_empty_post.snap  parse_input__nested_empty_pre.snap  parse_input__nested_empty_pre_and_post.snap  parse_input__optional_whitespace.snap  parse_input__qualified_whitespace.snap  parse_input__recursive_nested_infinite.snap  parse_input__shared_nonterminal_failure.snap  parse_input__shared_nullable_nonterminal.snap  parse_input__swap_left_right_recursion-2.snap  parse_input__swap_left_right_recursion.snap  parse_input__undefined_prod.snap  parse_input__undefined_prod_deprecated_parses.snap
