[package]
name = "bnf"
version = "0.4.3"
edition = "2021"
authors = ["@shnewto", "@CrockAgile", "@androm3da", "@sremedios", "@prbs23", "@z2oh",
"@lionel1704", "@benarmstead", "@jonay2000", "@SKalt", "@DrunkJon", "@Axiomatic-Mind"]

description = "A library for parsing Backus–Naur form context-free grammars"
readme = "README.md"
keywords = ["bnf", "earley", "parser"]

homepage = "https://github.com/shnewto/bnf"
repository = "https://github.com/shnewto/bnf"

license = "MIT"

[dependencies]
stacker = { version = "0.1.2", optional = true }
tracing = { version = "0.1.37", optional = true }
tracing-subscriber = { version = "0.3.16", optional = true, features = ["env-filter"] }
tracing-flame = { version = "0.2.0", optional = true }

[dependencies.rand]
version = "0.8.0"

[dependencies.nom]
version = "^7.0.0"

[dependencies.serde]
version = "1.0.118"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.61"

[dev-dependencies.quickcheck]
version = "1.0.2"

[dev-dependencies.criterion]
version = "0.4.0"
default-features = false # to disable Rayon for wasm32

[features]
default = ["stacker"]
unstable = []
tracing = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-flame"]

[[bench]]
name = "bnf"
harness = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.5", features = ["js"] } # needed for rand
