[package]
name = "bnf"
# don't manually edit this version unless you're sure you want to circumvent the process documented in RELEASE.md
version = "0.5.0"
edition = "2024"
authors = ["@shnewto", "@CrockAgile"]

description = "A library for parsing Backus–Naur form context-free grammars"
readme = "README.md"
keywords = ["bnf", "earley", "parser"]
exclude = [".github", "tests", "*.snap", "*.bnf"]

homepage = "https://github.com/shnewto/bnf"
repository = "https://github.com/shnewto/bnf"

license = "MIT"

[lints.clippy]
all = "deny"
clone_on_ref_ptr = "deny"
complexity = "deny"
dbg_macro = "deny"
doc_markdown = "deny"
exhaustive_structs = "deny"
indexing_slicing = "deny"
let_underscore_must_use = "deny"
map_err_ignore = "deny"
missing_const_for_fn = "deny"
must_use_candidate = "deny"
perf = "deny"
print_stderr = "deny"
print_stdout = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_type_annotations = "deny"
string_to_string = "deny"
style = "deny"
suspicious = "deny"
tests_outside_test_module = "deny"
todo = "deny"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
use_debug = "deny"

[dependencies]
tracing = { version = "0.1.37", optional = true }
tracing-subscriber = { version = "0.3.16", optional = true, features = ["env-filter"] }
tracing-flame = { version = "0.2.0", optional = true }
hashbrown = "0.15.0"

[dependencies.rand]
version = "0.9"

[dependencies.nom]
version = "^8.0.0"

[dependencies.serde]
version = "1.0.118"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1.0.61"
optional = true

[dev-dependencies]
divan = "0.1.8"
insta = { version = "1.26.0", default-features = false }

[dev-dependencies.quickcheck]
version = "1.0.2"

[dev-dependencies.criterion]
version = "0.5.0"
default-features = false # to disable Rayon for wasm32

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]
unstable = []
tracing = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-flame"]

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "divan"
harness = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.1", features = ["wasm_js"] } # needed for rand
