[package]
name = "bnf-macros"
version = "0.5.0"
edition = "2024"
authors = ["@shnewto", "@CrockAgile"]
description = "Procedural macros for bnf (grammar_const! etc.)"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
